<resources>
    <string name="app_name">Song Transcriber</string>
    <string name="new_song">New Song</string>
    <string name="new_song_option">New Song</string>
    <string name="set_time_option">Set Timing</string>
    <string name="play_song_option">Play Song</string>
    <string name="submit_song_info_button_text">Submit Song Info</string>
    <string name="song_info_submit_hint">Copy and paste lyrics</string>
    <string name="song_title_hint">Song Title</string>
    <string name="artist_name_input">Artist</string>
    <string name="app_icon_header_descr">App Icon Header</string>
    <string name="start_timings_button_text">Start Timings</string>
    <string name="instructions_text">Instructions:\nBegin playing the song &amp; hit Start\nClick Next at the end of each line</string>
    <string name="next_timings_button">Next</string>
    <string name="play_song_button_text">Play Song</string>
</resources>
