<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/app_background"
    tools:context=".SetTimingsPage">

    <TextView
        android:id="@+id/instructions_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/instructions_text"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/line_text_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/start_timings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_timings_button_text"
        android:textSize="18sp"
        android:layout_margin="30dp"
        android:onClick="onStartTimings"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:text="@string/next_timings_button"
        android:textSize="18sp"
        android:visibility="invisible"
        android:onClick="onNextLine"/>

</LinearLayout>